--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=production
+APP_KEY=base64:qv98tLx3+GP7ngH1tUxu4BdafO3KJmkzumqaio4BTXk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://mailboxhub.fun
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u898574757_mail
+DB_USERNAME=u898574757_mail
+DB_PASSWORD=Mail@1234$$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,14 +28,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailpit
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
+MAIL_ENCRYPTION=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
