--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=production
 APP_KEY=base64:qv98tLx3+GP7ngH1tUxu4BdafO3KJmkzumqaio4BTXk=
 APP_DEBUG=true
 APP_URL=https://mailboxhub.fun
+APP_WEBURL=https://tempmail4u.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
